fixed align

--- a/src/app/+customer/form/form.style.scss
+++ b/src/app/+customer/form/form.style.scss
@@ -22,6 +22,7 @@
             appearance:none;
             -moz-appearance:none;
             -webkit-appearance:none;
+            padding: 30px 0;
         }
     }
     .cr-delete {
